--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,6 @@ dependencies:
   charcode: ^1.1.3
   cloud_firestore: ^0.15.0
   cupertino_icons: ^1.0.0
-  # firebase_auth: ^0.19.0+1
-  # firebase_core: ^0.6.0
   flutter_icons: ^1.1.0
   flutter_local_notifications: ^2.0.0
   geocoding: ^1.0.5
@@ -41,6 +39,7 @@ dependencies:
   http: ^0.12.2
   inkwell_splash: ^0.1.0
   json_serializable: ^3.5.0
+  uuid: ^2.2.2
   validators: ^2.0.1
   vibration: ^1.7.1
 
@@ -52,7 +51,6 @@ dev_dependencies:
   change_app_package_name: ^0.1.2
   flutter_native_splash: ^0.1.9
   lint: ^1.3.0
-
 
 flutter_native_splash:
   color: "131a3b"
