--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   get: ^3.12.1
   get_storage: ^1.3.1
   google_fonts: ^1.1.0
+  google_places_flutter: ^2.0.3
   google_sign_in: ^4.5.9
   http: ^0.12.2
   inkwell_splash: ^0.1.0
