UI updates, GetX now handling tab controller

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ app.*.map.json
 lib/widgets/settings_drawer copy.dart
 lib/misc/test_page.dart
 lib/misc/weekly_forecast_controller.dart
+lib/misc/test_page.dart
