--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: ^4.5.9
   http: ^0.12.2
   inkwell_splash: ^0.1.0
+  scrollable_positioned_list: ^0.1.9
   uuid: ^2.2.2
   validators: ^2.0.1
   vibration: ^1.7.1
