--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,12 @@ dependencies:
   flutter_local_notifications: ^2.0.0
   geocoding: ^1.0.5
   geolocator: ^6.1.13
-  get: ^3.12.1
+  get: ^3.25.4
   get_storage: ^1.3.1
   google_fonts: ^1.1.0
   google_places_flutter: ^2.0.3
   google_sign_in: ^4.5.9
-  http: ^0.12.2
-  inkwell_splash: ^0.1.0
+  lat_lng_to_timezone: ^0.1.2
   scrollable_positioned_list: ^0.1.9
   uuid: ^2.2.2
   validators: ^2.0.1
