--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ lib/widgets/settings_drawer copy.dart
 lib/misc/test_page.dart
 lib/misc/weekly_forecast_controller.dart
 lib/misc/test_page.dart
+lib/services/network/api_keys.dart
