--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   charcode: ^1.1.3
   cloud_firestore: ^0.15.0
   cupertino_icons: ^1.0.0
+  dartz: ^0.9.2
+  data_connection_checker: ^0.3.4
   flutter_icons: ^1.1.0
   flutter_local_notifications: ^2.0.0
   geocoding: ^1.0.5
