--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   dartz: ^0.9.2
   data_connection_checker: ^0.3.4
+  flutter_email_sender: ^4.0.0
   flutter_icons: ^1.1.0
   flutter_local_notifications: ^2.0.0
   geocoding: ^1.0.5
