--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,6 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   black_cat_lib:
     path: ../black_cat_lib
   charcode: ^1.1.3
@@ -30,9 +28,11 @@ dependencies:
   cupertino_icons: ^1.0.0
   dartz: ^0.9.2
   data_connection_checker: ^0.3.4
+  flutter:
+    sdk: flutter
   flutter_email_sender: ^4.0.0
   flutter_icons: ^1.1.0
-  flutter_local_notifications: ^2.0.0
+  flutter_local_notifications: 4.0.1+2
   geocoding: ^1.0.5
   geolocator: ^6.1.13
   get: ^3.25.4
@@ -43,17 +43,18 @@ dependencies:
   image_picker: ^0.6.7+22
   lat_lng_to_timezone: ^0.1.2
   scrollable_positioned_list: ^0.1.9
+  timezone: ^0.6.1
   uuid: ^2.2.2
   validators: ^2.0.1
   vibration: ^1.7.1
 
 dependency_overrides: null
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   build_runner: ^1.10.0
   change_app_package_name: ^0.1.2
   flutter_native_splash: ^0.1.9
+  flutter_test:
+    sdk: flutter
   lint: ^1.3.0
 
 flutter_native_splash:
