--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   black_cat_lib:
     path: ../black_cat_lib
   charcode: ^1.1.3
-  cloud_firestore: ^0.15.0
+  # cloud_firestore: ^0.15.0
   cupertino_icons: ^1.0.0
   dartz: ^0.9.2
   data_connection_checker: ^0.3.4
