--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,22 +21,22 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter:
+    sdk: flutter
   black_cat_lib:
     path: ../black_cat_lib
+  app_settings: ^4.0.4
   charcode: ^1.1.3
-  # cloud_firestore: ^0.15.0
   cupertino_icons: ^1.0.0
   dartz: ^0.9.2
   data_connection_checker: ^0.3.4
-  flutter:
-    sdk: flutter
   flutter_email_sender: ^4.0.0
   flutter_icons: ^1.1.0
   flutter_local_notifications: 4.0.1+2
   geocoding: ^1.0.5
   geolocator: ^6.1.13
   get: ^3.25.4
-  get_storage: ^1.3.1
+  get_storage: ^1.4.0
   google_fonts: ^1.1.0
   google_places_flutter: ^2.0.3
   google_sign_in: ^4.5.9
@@ -50,11 +50,11 @@ dependencies:
 
 dependency_overrides: null
 dev_dependencies:
+  flutter_test:
+    sdk: flutter
   build_runner: ^1.10.0
   change_app_package_name: ^0.1.2
   flutter_native_splash: ^0.1.9
-  flutter_test:
-    sdk: flutter
   lint: ^1.3.0
 
 flutter_native_splash:
