--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.0
   dartz: ^0.9.2
   data_connection_checker: ^0.3.4
+  firebase_analytics: ^7.0.1
+  firebase_core: ^0.7.0
+  firebase_storage: 7.0.0
   flutter_email_sender: ^4.0.0
   flutter_local_notifications: 4.0.1+2
   geocoding: ^1.0.5
@@ -38,6 +41,7 @@ dependencies:
   get_storage: ^1.4.0
   google_fonts: ^1.1.0
   image_picker: ^0.6.7+22
+  path_provider: 1.6.28
   scrollable_positioned_list: ^0.1.10
   timezone: ^0.6.1
   uuid: ^2.2.2
