--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.0
   dartz: ^0.9.2
   data_connection_checker: ^0.3.4
-  firebase_analytics: ^7.0.1
-  firebase_core: ^0.7.0
-  firebase_storage: 7.0.0
+  firebase_analytics: 5.0.16
+  firebase_core: ^0.5.0+1
+  firebase_messaging: 7.0.3
+  firebase_storage: 5.2.0
   flutter_email_sender: ^4.0.0
   flutter_local_notifications: 4.0.1+2
   geocoding: ^1.0.5
