--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,35 +25,35 @@ dependencies:
     sdk: flutter
   black_cat_lib:
     path: ../black_cat_lib
-  app_settings: ^4.0.4
-  charcode: ^1.1.3
-  cupertino_icons: ^1.0.0
-  dartz: ^0.9.2
-  data_connection_checker: ^0.3.4
-  firebase_analytics: 5.0.16
-  firebase_core: ^0.5.0+1
-  firebase_messaging: 7.0.3
-  firebase_storage: 5.2.0
-  flutter_email_sender: ^4.0.0
-  flutter_local_notifications: 4.0.1+2
-  geocoding: ^1.0.5
-  geolocator: ^6.1.13
-  get: ^3.26.0
-  get_storage: ^1.4.0
-  google_fonts: ^1.1.0
-  image_picker: ^0.6.7+22
-  intl: ^0.16.1
-  scrollable_positioned_list: ^0.1.10
-  timezone: ^0.6.1
-  uuid: ^2.2.2
-  vibration: ^1.7.1
+  app_settings: ^4.1.0
+  charcode: ^1.2.0
+  cupertino_icons: ^1.0.2
+  dartz: ^0.10.0-nullsafety.1
+  # data_connection_checker: ^0.3.4
+  firebase_analytics: ^8.0.0
+  firebase_core: ^1.0.3
+  firebase_messaging: ^9.1.1
+  firebase_storage: ^8.0.3
+  flutter_email_sender: ^5.0.0
+  flutter_local_notifications: ^5.0.0+1
+  geocoding: ^2.0.0
+  geolocator: ^7.0.3
+  get: ^4.1.4
+  get_storage: ^2.0.2
+  google_fonts: ^2.0.0
+  image_picker: ^0.7.4
+  intl: ^0.17.0
+  scrollable_positioned_list: ^0.2.0-nullsafety.0
+  timezone: ^0.7.0
+  uuid: ^3.0.4
+  vibration: ^1.7.4-nullsafety.0
 
 dependency_overrides: null
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_native_splash: ^0.1.9
-  lint: ^1.3.0
+  flutter_native_splash: ^1.1.7+1
+  lint: ^1.5.3
 
 flutter_native_splash:
   color: "131a3b"
