--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -29,7 +29,6 @@ dependencies:
   charcode: ^1.2.0
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.1
-  # data_connection_checker: ^0.3.4
   firebase_analytics: ^8.0.0
   firebase_core: ^1.0.3
   firebase_messaging: ^9.1.1
@@ -42,6 +41,7 @@ dependencies:
   get_storage: ^2.0.2
   google_fonts: ^2.0.0
   image_picker: ^0.7.4
+  internet_connection_checker: ^0.0.1
   intl: ^0.17.0
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   timezone: ^0.7.0
