--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -46,84 +46,76 @@ dependencies:
   iphone_has_notch: ^1.0.0
   lat_lng_to_timezone: ^0.2.0
   responsive_framework: ^0.1.0
-  sentry_flutter: ^5.0.0
+  scroll_to_index: ^2.0.0
   scrollable_positioned_list: ^0.2.0-nullsafety.0
+  sentry_flutter: ^5.0.0
   timezone: ^0.7.0
   uuid: ^3.0.4
   vibration: ^1.7.4-nullsafety.0
 
 dependency_overrides: null
 dev_dependencies:
-  flutter_native_splash: ^1.1.7+1
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^1.1.7+1
   lint: ^1.5.3
 
 flutter_native_splash:
-
   # This package generates native code to customize Flutter's default white native splash screen
   # with background color and splash image.
   # Customize the parameters below, and run the following command in the terminal:
   # flutter pub run flutter_native_splash:create
   # To restore Flutter's default white splash screen, run the following command in the terminal:
   # flutter pub run flutter_native_splash:remove
-
   # color or background_image is the only required parameter.  Use color to set the background
   # of your splash screen to a solid color.  Use background_image to set the background of your
   # splash screen to a png image.  This is useful for gradients. The image will be stretch to the
   # size of the app. Only one parameter can be used, color and background_image cannot both be set.
   # color: "#42a5f5"
   background_image: "assets/images/1_earth_from_space.png"
-  
-  # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing 
+  # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
   # the leading # character.
-
-  # The image parameter allows you to specify an image used in the splash screen.  It must be a 
-  # png file.  
+  # The image parameter allows you to specify an image used in the splash screen.  It must be a
+  # png file.
   # image: assets/splash.png
-
   # The color_dark, background_image_dark, and image_dark are parameters that set the background
   # and image when the device is in dark mode. If they are not specified, the app will use the
-  # parameters from above. If the image_dark parameter is specified, color_dark or 
+  # parameters from above. If the image_dark parameter is specified, color_dark or
   # background_image_dark must be specified.  color_dark and background_image_dark cannot both be
   # set.
   #color_dark: "#042a49"
   #background_image_dark: "assets/dark-background.png"
   #image_dark: assets/splash-invert.png
-
-  # The android, ios and web parameters can be used to disable generating a splash screen on a given 
+  # The android, ios and web parameters can be used to disable generating a splash screen on a given
   # platform.
   #android: false
   #ios: false
   #web: false
-
   # The position of the splash image can be set with android_gravity, ios_content_mode, and
   # web_image_mode parameters.  All default to center.
   #
-  # android_gravity can be one of the following Android Gravity (see 
-  # https://developer.android.com/reference/android/view/Gravity): bottom, center, 
+  # android_gravity can be one of the following Android Gravity (see
+  # https://developer.android.com/reference/android/view/Gravity): bottom, center,
   # center_horizontal, center_vertical, clip_horizontal, clip_vertical, end, fill, fill_horizontal,
   # fill_vertical, left, right, start, or top.
   #android_gravity: center
   #
-  # ios_content_mode can be one of the following iOS UIView.ContentMode (see 
-  # https://developer.apple.com/documentation/uikit/uiview/contentmode): scaleToFill, 
-  # scaleAspectFit, scaleAspectFill, center, top, bottom, left, right, topLeft, topRight, 
+  # ios_content_mode can be one of the following iOS UIView.ContentMode (see
+  # https://developer.apple.com/documentation/uikit/uiview/contentmode): scaleToFill,
+  # scaleAspectFit, scaleAspectFill, center, top, bottom, left, right, topLeft, topRight,
   # bottomLeft, or bottomRight.
   #ios_content_mode: center
   #
   # web_image_mode can be one of the following modes: center, contain, stretch, and cover.
   #web_image_mode: center
-
-  # To hide the notification bar, use the fullscreen parameter.  Has no affect in web since web 
+  # To hide the notification bar, use the fullscreen parameter.  Has no affect in web since web
   # has no notification bar.  Defaults to false.
   # NOTE: Unlike Android, iOS will not automatically show the notification bar when the app loads.
   #       To show the notification bar, add the following code to your Flutter app:
   #       WidgetsFlutterBinding.ensureInitialized();
   #       SystemChrome.setEnabledSystemUIOverlays([SystemUiOverlay.bottom, SystemUiOverlay.top]);
   # fullscreen: true
-  
-  # If you have changed the name(s) of your info.plist file(s), you can specify the filename(s) 
+  # If you have changed the name(s) of your info.plist file(s), you can specify the filename(s)
   # with the info_plist_files parameter.  Remove only the # characters in the three lines below,
   # do not remove any spaces:
   #info_plist_files:
