--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="epic_skies"
+        android:label="Epic Skies"
         android:allowBackup="false"
         android:fullBackupOnly="false"
         android:icon="@mipmap/ic_launcher">
