--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ dev_dependencies:
   lint: ^1.5.3
 
 flutter_native_splash:
-  background_image: "assets/images/1_earth_from_space.png"
+  background_image: 'assets/images/earth_from_space_with_logo.jpg'
 
 flutter:
   fonts:
