--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   internet_connection_checker: ^0.0.1
   intl: ^0.17.0
   iphone_has_notch: ^1.0.0
+  json_serializable: ^4.1.3
   lat_lng_to_timezone: ^0.2.0
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   sentry_flutter: ^5.0.0
