--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   iphone_has_notch: ^1.0.0
   json_serializable: ^4.1.3
   lat_lng_to_timezone: ^0.2.0
+  location: ^4.3.0
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   sentry_flutter: ^5.0.0
   sizer: ^2.0.13
