--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   json_serializable: ^4.1.3
   lat_lng_to_timezone: ^0.2.0
   location: ^4.3.0
-  permission_handler: ^8.1.4+2
+  location_permissions: ^4.0.0
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   sentry_flutter: ^5.0.0
   sizer: ^2.0.13
