--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -54,5 +54,25 @@
 		<false/>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		<key>FlutterDeepLinkingEnabled</key>
+		<true/>
+		<key>CFBundleURLTypes</key>
+		<array>
+    		<dict>
+   		 	<key>CFBundleTypeRole</key>
+    		<string>Editor</string>
+    		<key>CFBundleURLName</key>
+    		<string>flutterbooksample.com</string>
+    		<key>CFBundleURLSchemes</key>
+    		<array>
+    		<string>customscheme</string>
+    		</array>
+   		 </dict>
+		</array>
+		<key>LSApplicationQueriesSchemes</key>
+		<array>
+  			<string>https</string>
+  			<string>http</string>
+		</array>
 	</dict>
 </plist>
