--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   sentry_flutter: ^5.0.0
   sizer: ^2.0.13
   timezone: ^0.7.0
+  url_launcher: ^6.0.9
   uuid: ^3.0.4
   vibration: ^1.7.4-nullsafety.0
 
