--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,35 +1,26 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-    
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "epic_skies",
+      "type": "dart",
+      "request": "launch"
+    },
+    {
+      "name": "epic_skies_profile",
+      "type": "dart",
+      "request": "launch",
+      "flutterMode": "profile"
+    },
 
-
-        {
-            "name": "epic_skies",
-            "type": "dart",
-            "request": "launch",
-        },
-        {
-            "name": "epic_skies_profile",
-            "type": "dart",
-            "request": "launch",
-            "flutterMode": "profile",
-
-        },
-
-        {
-            "name": "epic_skies_release",
-            "request": "launch",
-            "type": "dart", 
-            "flutterMode": "release",
-        }
-
-    
-        
-
-      
-    ]
+    {
+      "name": "epic_skies_release",
+      "request": "launch",
+      "type": "dart",
+      "flutterMode": "release"
+    }
+  ]
 }
