updates to follow new default Flutter linting

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,3 +12,5 @@ analyzer:
     parameter_assignments: error
     sort_pub_dependencies: false
     avoid_classes_with_only_static_members: false
+    avoid_multiple_declarations_per_line: false
+
