--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,8 @@ dependencies:
   dart_date: ^1.1.0
   firebase_analytics: ^8.0.0
   firebase_core: ^1.0.3
-  firebase_messaging: ^9.1.1
-  firebase_storage: ^8.0.3
+  firebase_messaging: ^10.0.8
+  firebase_storage: ^10.0.5
   flutter:
     sdk: flutter
   flutter_email_sender: ^5.0.2
@@ -30,18 +30,20 @@ dependencies:
   get_storage: ^2.0.2
   google_fonts: ^2.0.0
   hexcolor: ^2.0.5
-  image_picker: ^0.7.4
+  image_picker: ^0.8.4+3
   internet_connection_checker: ^0.0.1
   intl: ^0.17.0
   iphone_has_notch: ^1.0.0
-  json_serializable: ^4.1.3
+  json_serializable: ^6.0.0
   lat_lng_to_timezone: ^0.2.0
   location: ^4.3.0
   location_permissions: ^4.0.0
+  package_info_plus: ^1.3.0
+  path_provider: ^2.0.5
   scrollable_positioned_list: ^0.2.0-nullsafety.0
-  sentry_flutter: ^5.0.0
+  sentry_flutter: ^6.0.1
   sizer: ^2.0.13
-  timezone: ^0.7.0
+  timezone: ^0.8.0
   url_launcher: ^6.0.9
   uuid: ^3.0.4
   vibration: ^1.7.4-nullsafety.0
