--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,16 @@
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    
+    <queries>
+     <intent>
+      <action android:name="android.intent.action.SENDTO" />
+      <data android:scheme="mailto" />
+     </intent>
+     <intent>
+      <action android:name="android.intent.action.VIEW" />
+      <data android:scheme="https" />
+     </intent>
+    </queries>
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="Epic Skies"
