--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   location_permissions: ^4.0.0
   package_info_plus: ^1.3.0
   path_provider: ^2.0.5
+  path_provider_platform_interface: ^2.0.1
+  plugin_platform_interface: ^2.0.2
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   sentry_flutter: ^6.0.1
   sizer: ^2.0.13
