--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   charcode: ^1.2.0
   cupertino_icons: ^1.0.2
   dart_date: ^1.1.0
+  equatable: ^2.0.3
   firebase_analytics: ^8.0.0
   firebase_core: ^1.0.3
   firebase_messaging: ^10.0.8
