REFACTOR: project folder restructure

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ lib/services/network/api_keys.dart
 lib/misc
 lib/core/network/api_keys.dart
 android/app/release/app-release.aab
+applicationDocumentsPath
