--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ lib/misc
 lib/core/network/api_keys.dart
 android/app/release/app-release.aab
 applicationDocumentsPath
+ios/build/Pods.build/Release-iphonesimulator
