--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: Epic Weather App
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 0.1.8+10
+version: 0.1.85+11
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -13,16 +13,15 @@ environment:
 dependencies:
   app_settings: ^4.1.0
   black_cat_lib:
-    # path: /Users/lorenaguey/Dropbox/Development/Flutter/my_apps/black_cat_lib
     git: https://github.com/BlackCatDev-IO/black_cat_dev_library
   charcode: ^1.2.0
   cupertino_icons: ^1.0.2
   dart_date: ^1.1.0
   equatable: ^2.0.3
-  firebase_analytics: ^8.0.0
-  firebase_core: ^1.0.3
-  firebase_messaging: ^10.0.8
-  firebase_storage: ^10.0.5
+  firebase_analytics: ^8.3.4
+  firebase_core: ^1.10.0
+  firebase_messaging: ^11.1.0
+  firebase_storage: ^10.1.0
   flutter:
     sdk: flutter
   flutter_email_sender: ^5.0.2
@@ -39,6 +38,7 @@ dependencies:
   lat_lng_to_timezone: ^0.2.0
   location: ^4.3.0
   location_permissions: ^4.0.0
+  nil: ^1.1.1
   package_info_plus: ^1.3.0
   path_provider: ^2.0.5
   path_provider_platform_interface: ^2.0.1
