--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: Epic Weather App
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 0.1.85+11
+version: 0.2.0+13
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -17,6 +17,7 @@ dependencies:
   charcode: ^1.2.0
   cupertino_icons: ^1.0.2
   dart_date: ^1.1.0
+  dio: ^4.0.3
   equatable: ^2.0.3
   firebase_analytics: ^8.3.4
   firebase_core: ^1.10.0
