--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,19 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<!-- MY ADDITIONS -->
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Weather forecast requires location</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Local weather forecast requires location when refreshing</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Epic Skies offers the option to set a background from the users photo gallery</string>
-	<key>LSApplicationQueriesSchemes</key>
-    <array>    
-    <string>https</string>
-    <string>http</string>
-    </array>
-	<!-- MY ADDITIONS -->
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -30,13 +17,24 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(FLUTTER_BUILD_NAME)</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>https</string>
+		<string>http</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Weather forecast requires location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Local weather forecast requires location when refreshing</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Epic Skies offers the option to set a background from the users photo gallery</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
