--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   json_serializable: ^6.0.0
   lat_lng_to_timezone: ^0.2.0
   location: ^4.3.0
+  meta: ^1.7.0
   nil: ^1.1.1
   package_info_plus: ^1.3.0
   path_provider: ^2.0.5
@@ -78,3 +79,4 @@ flutter:
     - assets/icons/
     - assets/icons/vclouds_icons/
     - assets/icons/sun_time_icons/
+    - assets/icons/precip_icons/
