--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,10 @@ dependencies:
   flutter_email_sender: ^5.0.2
   geocoding: ^2.0.0
   get: ^4.3.8
-  get_storage: ^2.0.2
   google_fonts: ^2.0.0
   hexcolor: ^2.0.5
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
   image_picker: ^0.8.4+3
   internet_connection_checker: ^0.0.1
   intl: ^0.17.0
