CONFIG: update Android gradle amd misc config

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
      </intent>
     </queries>
     <application
-        android:name="io.flutter.app.FlutterApplication"
+        android:name="${applicationName}"
         android:label="Epic Skies"
         android:allowBackup="false"
         android:fullBackupOnly="false"
