--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,19 +19,18 @@ dependencies:
   dart_date: ^1.1.0
   dio: ^4.0.3
   equatable: ^2.0.3
-  firebase_analytics: ^8.3.4
-  firebase_core: ^1.10.0
-  firebase_messaging: ^11.1.0
-  firebase_storage: ^10.1.0
+  firebase_analytics: ^9.1.0
+  firebase_core: ^1.12.0
+  firebase_messaging: ^11.2.6
+  firebase_storage: ^10.2.6
   flutter:
     sdk: flutter
   flutter_email_sender: ^5.0.2
   geocoding: ^2.0.0
   get: ^4.3.8
+  get_storage: ^2.0.3
   google_fonts: ^2.0.0
   hexcolor: ^2.0.5
-  hive: ^2.0.5
-  hive_flutter: ^1.1.0
   image_picker: ^0.8.4+3
   internet_connection_checker: ^0.0.1
   intl: ^0.17.0
@@ -41,6 +40,8 @@ dependencies:
   location: ^4.3.0
   meta: ^1.7.0
   nil: ^1.1.1
+  objectbox: ^1.3.0
+  objectbox_flutter_libs: ^1.3.0
   package_info_plus: ^1.3.0
   path_provider: ^2.0.5
   path_provider_platform_interface: ^2.0.1
@@ -60,6 +61,8 @@ dev_dependencies:
     sdk: flutter
   lint: ^1.5.3
   mockito: ^5.0.16
+  build_runner: ^2.0.0
+  objectbox_generator: any
 
 flutter_native_splash:
   background_image: "assets/images/earth_from_space_with_logo.png"
