--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -14,3 +14,4 @@ analyzer:
     avoid_classes_with_only_static_members: false
     avoid_multiple_declarations_per_line: false
     use_full_hex_values_for_flutter_colors: false
+    always_use_package_imports: false
