--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   location: ^4.3.0
   meta: ^1.7.0
   nil: ^1.1.1
+  objectbox: ^1.3.0
+  objectbox_flutter_libs: ^1.3.0
+  objectbox_generator: ^1.3.0
   package_info_plus: ^1.3.0
   path_provider: ^2.0.5
   path_provider_platform_interface: ^2.0.1
@@ -54,11 +57,12 @@ dependencies:
 
 dependency_overrides: null
 dev_dependencies:
+  build_runner: ^2.1.7
   flutter_native_splash: ^1.1.7+1
   flutter_test:
     sdk: flutter
   lint: ^1.5.3
-  mockito: ^5.0.16
+  mocktail: ^0.2.0
 
 flutter_native_splash:
   background_image: "assets/images/earth_from_space_with_logo.png"
