--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dart_date: ^1.1.0
   dio: ^4.0.3
+  enum_to_string: ^2.0.1
   equatable: ^2.0.3
   firebase_analytics: ^9.1.0
   firebase_core: ^1.12.0
