--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: Epic Weather App
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 0.2.2+15
+version: 0.2.3+16
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -36,10 +36,8 @@ dependencies:
   internet_connection_checker: ^0.0.1
   intl: ^0.17.0
   iphone_has_notch: ^1.0.0
-  json_serializable: ^6.0.0
   lat_lng_to_timezone: ^0.2.0
   location: ^4.3.0
-  meta: ^1.7.0
   nil: ^1.1.1
   objectbox: ^1.3.0
   objectbox_flutter_libs: ^1.3.0
@@ -53,7 +51,6 @@ dependencies:
   timezone: ^0.8.0
   url_launcher: ^6.0.9
   uuid: ^3.0.4
-  vibration: ^1.7.4-nullsafety.0
 
 dependency_overrides: null
 dev_dependencies:
@@ -61,7 +58,9 @@ dev_dependencies:
   flutter_native_splash: ^1.1.7+1
   flutter_test:
     sdk: flutter
+  http_mock_adapter: ^0.3.2
   lint: ^1.5.3
+  meta: ^1.7.0
   mocktail: ^0.2.0
   objectbox_generator: ^1.3.0
 
