--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_email_sender: ^5.1.0
+  flutter_keyboard_visibility: ^5.4.0
   geocoding: ^2.0.4
   get: ^4.6.5
   get_storage: ^2.0.3
