--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,4 +65,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
+    def billing_version = "5.1.0"
+    implementation "com.android.billingclient:billing:$billing_version"
 }
