--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flat_buffers: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.0.2
   flutter_bloc: ^8.1.1
   flutter_email_sender: ^5.1.0
   flutter_keyboard_visibility: ^5.4.0
@@ -47,8 +48,8 @@ dependencies:
   lat_lng_to_timezone: ^0.2.0
   location: ^4.3.0
   nil: ^1.1.1
-  objectbox: ^1.6.0
-  objectbox_flutter_libs: ^1.3.0
+  objectbox: ^1.7.0
+  objectbox_flutter_libs: ^1.7.0
   package_info_plus: ^1.3.0
   path_provider: ^2.0.5
   path_provider_platform_interface: ^2.0.1
@@ -92,3 +93,4 @@ flutter:
     - assets/icons/vclouds_icons/
     - assets/icons/sun_time_icons/
     - assets/icons/precip_icons/
+    - .env
