--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_email_sender: ^5.1.0
   flutter_keyboard_visibility: ^5.4.0
+  freezed: ^2.2.0
+  freezed_annotation: ^2.2.0
   geocoding: ^2.0.5
   get: ^4.6.5
   get_it: ^7.2.0
@@ -63,6 +65,7 @@ dependencies:
 dev_dependencies:
   bloc_test: ^9.1.0
   build_runner: ^2.1.7
+  json_serializable: ^6.5.4
   flutter_native_splash: ^2.2.7
   flutter_test:
     sdk: flutter
