--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 0.2.9+23
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
   app_settings: ^4.1.0
@@ -64,6 +64,7 @@ dev_dependencies:
   bloc_test: ^9.1.0
   build_runner: ^2.1.7
   json_serializable: ^6.5.4
+  json_annotation: ^4.7.0
   flutter_native_splash: ^2.2.7
   flutter_test:
     sdk: flutter
