--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -33,3 +33,5 @@ analyzer:
     - lib/features/sun_times/models/sun_time_model.g.dart
     - lib/models/widget_models/daily_scroll_widget_model.g.dart
     - lib/services/settings/unit_settings/unit_settings_model.g.dart
+    - lib/features/current_weather_forecast/cubit/current_weather_state.g.dart
+    - lib/features/current_weather_forecast/models/current_weather_model.g.dart
