add freezed to SearchLocalWeatherButtonModel

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -39,3 +39,4 @@ analyzer:
     - lib/services/settings/unit_settings/unit_settings_model.g.dart
     - lib/features/current_weather_forecast/cubit/current_weather_state.g.dart
     - lib/features/current_weather_forecast/models/current_weather_model.g.dart
+    - lib/features/main_weather/models/search_local_weather_button_model.g.dart
