replace dotenv with environment_congig for CI/CD

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ thunder-tests/thunderActivity.json
 thunder-tests/thunderclient.json
 thunder-tests/thunderCollection.json
 thunder-tests/thunderEnvironment.json
+lib/environment_config.dart
