--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   device_info_plus: ^8.0.0
   dio: ^4.0.6
   enum_to_string: ^2.0.1
+  environment_config: ^3.1.0
   equatable: ^2.0.5
   firebase_core: ^2.4.1
   firebase_storage: ^11.0.10
@@ -27,7 +28,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
-  flutter_dotenv: ^5.0.2
   flutter_email_sender: ^5.1.0
   flutter_keyboard_visibility: ^5.4.0
   freezed: ^2.2.0
@@ -91,4 +91,3 @@ flutter:
     - assets/icons/vclouds_icons/
     - assets/icons/sun_time_icons/
     - assets/icons/precip_icons/
-    - .env
