add pubspec.lock to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ thunder-tests/thunderclient.json
 thunder-tests/thunderCollection.json
 thunder-tests/thunderEnvironment.json
 lib/environment_config.dart
+pubspec.lock
