--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,17 +35,17 @@ dependencies:
   freezed: ^2.2.0
   freezed_annotation: ^2.2.0
   geocoding: ^2.0.5
+  geolocator: ^9.0.2
   get_it: ^7.2.0
   google_fonts: ^3.0.1
   google_mobile_ads: ^2.3.0
-  hexcolor: ^2.0.5
+  hexcolor: ^3.0.1
   hydrated_bloc: ^9.0.0
   image_picker: ^0.8.4+3
   in_app_purchase: ^3.0.8
   intl: ^0.17.0
   iphone_has_notch: ^1.0.0
   lat_lng_to_timezone: ^0.2.0
-  location: ^4.4.0
   mixpanel_flutter: ^2.0.0
   nil: ^1.1.1
   package_info_plus: ^1.3.0
