--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -41,3 +41,4 @@ analyzer:
     - lib/features/current_weather_forecast/models/current_weather_model.g.dart
     - lib/features/main_weather/models/search_local_weather_button_model.g.dart
     - lib/features/main_weather/models/local_weather_button_model.g.dart
+    - lib/features/bg_image/models/weather_image_model.g.dart
