--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ lib/features/main_weather/models/local_weather_button_model.g.dart
 lib/services/app_updates/bloc/app_update_state.freezed.dart
 lib/services/app_updates/bloc/app_update_state.g.dart
 ios/build/ios/Pods.build/Release-iphonesimulator/flutter_keyboard_visibility.build/dgph~
+lib/features/banner_ads/bloc/ad_bloc.freezed.dart
+lib/features/banner_ads/bloc/ad_bloc.g.dart
