--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   package_info_plus: ^3.0.3
   path_provider: ^2.0.5
   path_provider_platform_interface: ^2.0.1
+  permission_handler: ^10.2.0
   plugin_platform_interface: ^2.0.2
   responsive_framework: ^0.2.0
   scrollable_positioned_list: ^0.3.5
