use fork of location package to fix gradle issue

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,11 @@ dependencies:
   iphone_has_notch: ^1.0.0
   lat_lng_to_timezone: ^0.2.0
   loading_animation_widget: ^1.2.0+4
-  location: ^4.4.0
+  location:
+    git:
+      url: https://github.com/781flyingdutchman/flutterlocation.git
+      ref: V4
+      path: packages/location
   mixpanel_flutter: ^2.0.0
   nil: ^1.1.1
   package_info_plus: ^3.0.3
