--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: Epic Weather App
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.1+42
+version: 1.0.2+43
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -20,6 +20,7 @@ dependencies:
   charcode: ^1.2.0
   cupertino_icons: ^1.0.2
   dart_date: ^1.2.2
+  dart_mappable: ^3.1.2
   device_info_plus: ^9.0.2
   dio: ^5.3.0
   enum_to_string: ^2.0.1
@@ -67,6 +68,7 @@ dependencies:
   uuid: ^3.0.6
 
 dev_dependencies:
+  dart_mappable_builder: ^3.1.1
   flutter_test:
     sdk: flutter
   json_serializable: ^6.5.4
