--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   scrollable_positioned_list: ^0.3.8
   sentry_flutter: ^7.8.0
   timezone: ^0.9.2
+  upgrader: ^8.0.0
   url_launcher: ^6.1.12
   uuid: ^3.0.6
 
