--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -34,7 +34,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Weather forecast requires location</string>
+	<string>Your location is used to fetch the correct conditions when checking your local weather.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Your location is used to fetch the correct conditions when checking your local weather.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
