Add JWT dependency and update gitignore #62

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,25 @@ lib/core/network/weather_kit/models/hourly/hour_weather_conditions.mapper.dart
 lib/core/network/weather_kit/models/daily/day_weather_conditions.mapper.dart
 lib/core/network/weather_kit/models/current/current_weather_data.mapper.dart
 lib/core/network/weather_kit/models/weather/weather.mapper.dart
+lib/core/network/weather_kit/models/metadata/metadata.mapper.dart
+lib/core/network/weather_kit/models/daily/forecast_daily.mapper.dart
+lib/core/network/weather_kit/models/hourly/forecast_hourly.mapper.dart
+lib/features/current_weather_forecast/cubit/current_weather_state.mapper.dart
+lib/features/current_weather_forecast/models/current_weather_model.mapper.dart
+lib/features/daily_forecast/cubit/daily_forecast_state.mapper.dart
+lib/features/daily_forecast/models/daily_forecast_model.mapper.dart
+lib/features/hourly_forecast/cubit/hourly_forecast_state.mapper.dart
+lib/features/hourly_forecast/models/hourly_forecast_model/hourly_forecast_model.mapper.dart
+lib/features/hourly_forecast/models/hourly_vertical_widget_model/hourly_vertical_widget_model.mapper.dart
+.gitignore
+lib/features/hourly_forecast/models/sorted_hourly_list_model/sorted_hourly_list_model.mapper.dart
+lib/services/settings/unit_settings/unit_settings_model.mapper.dart
+lib/features/main_weather/bloc/weather_state.mapper.dart
+lib/features/main_weather/models/weather_response_model/weather_data_model.mapper.dart
+lib/features/main_weather/models/weather_response_model/current_data/current_data.mapper.dart
+.gitignore
+lib/features/main_weather/models/weather_response_model/daily_data/daily_data_model.mapper.dart
+lib/features/main_weather/models/weather_response_model/hourly_data/hourly_data_model.mapper.dart
+lib/features/sun_times/models/sun_time_model.mapper.dart
+lib/models/widget_models/daily_nav_button_model.mapper.dart
+lib/models/widget_models/daily_scroll_widget_model.mapper.dart
