--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   charcode: ^1.2.0
   cupertino_icons: ^1.0.2
   dart_date: ^1.2.2
+  dart_jsonwebtoken: ^2.8.2
   dart_mappable: ^3.1.2
   device_info_plus: ^9.0.2
   dio: ^5.3.0
