Add daily scroll widget generated files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -80,4 +80,5 @@ lib/features/location/user_location/models/location_model.freezed.dart
 lib/features/location/user_location/models/location_model.g.dart
 app_store_screenshots/
 lib/features/main_weather/bloc/weather_state.freezed.dart
-
+lib/models/widget_models/daily_scroll_widget_model.freezed.dart
+lib/models/widget_models/daily_scroll_widget_model.g.dart
