Fix: Weather alerts not being returned in WeatherKit response #62

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,4 @@ lib/features/main_weather/models/weather_response_model/hourly_data/hourly_data_
 lib/features/sun_times/models/sun_time_model.mapper.dart
 lib/models/widget_models/daily_nav_button_model.mapper.dart
 lib/models/widget_models/daily_scroll_widget_model.mapper.dart
+lib/core/network/weather_kit/models/alerts/weather_alert_collection.mapper.dart
