--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,21 @@
       "request": "launch",
       "type": "dart",
       "flutterMode": "release"
+    },
+    {
+      "name": "Launch Staging",
+      "request": "launch",
+      "type": "dart",
+      "flutterMode": "release",
+      "program": "lib/main.dart",
+      "args": ["--flavor", "staging", "--target", "lib/main.dart"]
+    },
+    {
+      "name": "Launch Staging-Debug",
+      "request": "launch",
+      "type": "dart",
+      "program": "lib/main.dart",
+      "args": ["--flavor", "staging", "--target", "lib/main.dart"]
     }
   ]
 }
