--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ app_store_screenshots/
 devtools_options.yaml
  
 ios/build/ios/Pods.build/
+assets/mock_json/WeatherKit-Response-false-snow-warning.json
