--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,4 +97,4 @@ flutter:
     - assets/icons/vclouds_icons/
     - assets/icons/sun_time_icons/
     - assets/icons/precip_icons/
-    - assets/mock_json/WeatherKit-Response-false-snow-warning.json
+    - assets/mock_json/
