Upgrade gradle to 8.3.1

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,16 @@
         google()
         jcenter()
     }
+
+        afterEvaluate { project ->
+        if (project.hasProperty('android')) {
+            project.android {
+                if (namespace == null) {
+                    namespace project.group
+                }
+            }
+        }
+    }
 }
 
 rootProject.buildDir = '../build'
