--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,15 @@ if (flutterVersionName == null) {
 android {
     compileSdkVersion 34
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
+    kotlinOptions {
+        jvmTarget = "11"
+    }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -32,6 +41,7 @@ android {
 
     defaultConfig {
         applicationId "com.blackcatdev.epic_skies"
+        namespace("com.blackcatdev.epic_skies")
         minSdkVersion 28
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
@@ -63,6 +73,11 @@ android {
     }
     lint {
         disable 'InvalidPackage'
+    }
+    namespace 'com.blackcatdev.epic_skies'
+
+    if (project.android.hasProperty("namespace")) {
+        namespace("com.blackcatdev.epic_skies")
     }
 }
 
